--- a/app/src/main/res/layout/layout_bottom_sheet_dialog_cart.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_dialog_cart.xml
@@ -150,7 +150,7 @@
                 android:textStyle="bold"
                 android:textSize="25dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="textview_discount_cart"
+                app:layout_constraintTop_toTopOf="@+id/discount_cart"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="50dp"
