--- a/app/src/main/res/layout/activity_book_search.xml
+++ b/app/src/main/res/layout/activity_book_search.xml
@@ -62,13 +62,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/book_search_activity_search_appbar"
         android:background="@color/topbar_zimablue">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textAlignment="center"
-            app:layout_scrollFlags="scroll"
-            android:textSize="20dp"/>
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -76,39 +69,28 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/baseline_arrow_back_24"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:id="@+id/book_search_activity_return_arrow_icon"
-                android:paddingStart="-5dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-            <com.google.android.material.search.SearchBar
-                android:layout_marginVertical="5dp"
-                android:id="@+id/book_search_activity_search_bar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_scrollFlags="enterAlways"
-                android:hint="@string/search_placeholder"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/book_search_activity_return_arrow_icon"
-                app:layout_constraintEnd_toStartOf="@id/book_search_activity_cart_icon"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:background="?attr/selectableItemBackground"
-                android:src="@drawable/ic_cart"
-                android:id="@+id/book_search_activity_cart_icon"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/baseline_arrow_back_24"
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:id="@+id/book_search_activity_return_arrow_icon"
+                    android:paddingStart="-5dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+                <com.google.android.material.search.SearchBar
+                    android:layout_marginVertical="5dp"
+                    android:id="@+id/book_search_activity_search_bar"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_scrollFlags="enterAlways"
+                    android:hint="@string/search_placeholder"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/book_search_activity_return_arrow_icon"
+                    app:layout_constraintEnd_toEndOf="parent"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
@@ -126,8 +108,9 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/book_search_activity_sale_spinner"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:paddingStart="50dp"
+                android:entries="@array/book_search_activity_in_stock_spinner_items"
                 android:id="@+id/book_search_activity_in_stock_spinner"/>
             <Spinner
                 android:layout_width="wrap_content"
@@ -135,7 +118,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/book_search_activity_in_stock_spinner"
+                android:entries="@array/book_search_activity_sale_spinner_items"
                 android:id="@+id/book_search_activity_sale_spinner"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
